Added Absolute vorticity at 500 hPa

--- a/prev2.html
+++ b/prev2.html
@@ -1,145 +1,145 @@
 <Table border="1">
 <tr align='center'>
-<td nowrap >Data</td>
-<td nowrap >Orario</td>
-<td nowrap >Temperatura ( °C)</td>
-<td nowrap >Umidita (%)</td>
-<td nowrap >Nuvolosita</td>
-<td nowrap >Pioggia (intensita)</td>
-<td nowrap >Vento (direzione)</td>
-<td nowrap >Vento (intensita)</td>
-<td nowrap >Nebbia (Intensita)</td>
+<td nowrap ><h2>Data</td></h2>
+<td nowrap ><h2>Orario</td></h2>
+<td nowrap ><h2>Temperatura ( °C)</td></h2>
+<td nowrap ><h2>Umidita (%)</td></h2>
+<td nowrap ><h2>Nuvolosita</td></h2>
+<td nowrap ><h2>Pioggia (intensita)</td></h2>
+<td nowrap ><h2>Vento (direzione)</td></h2>
+<td nowrap ><h2>Vento (intensita)</td></h2>
+<td nowrap ><h2>Nebbia (Intensita)</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap >29/06/2017</td>
-<td nowrap >ore 0</td>
-<td nowrap >25</td>
-<td nowrap >75</td>
-<td nowrap >Sereno</td>
-<td nowrap >-</td>
-<td nowrap >Sud (Ostro)</td>
-<td nowrap >Brezza tesa</td>
-<td nowrap >-</td>
+<td nowrap ><h2>12/07/2017</td></h2>
+<td nowrap ><h2>ore 0</td></h2>
+<td nowrap ><h2>30</td></h2>
+<td nowrap ><h2>36</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2><img src=icons/nw.png></img></td></h2>
+<td nowrap ><h2>Brezza leggera</td></h2>
+<td nowrap ><h2>-</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap > </td>
-<td nowrap >ore 6</td>
-<td nowrap >29</td>
-<td nowrap >50</td>
-<td nowrap >Sereno</td>
-<td nowrap >-</td>
-<td nowrap >Sud (Ostro)</td>
-<td nowrap >Brezza leggera</td>
-<td nowrap >-</td>
+<td nowrap ><h2> </td></h2>
+<td nowrap ><h2>ore 6</td></h2>
+<td nowrap ><h2>38</td></h2>
+<td nowrap ><h2>17</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2><img src=icons/n.png></img></td></h2>
+<td nowrap ><h2>Brezza leggera</td></h2>
+<td nowrap ><h2>-</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap > </td>
-<td nowrap >ore 12</td>
-<td nowrap >36</td>
-<td nowrap >25</td>
-<td nowrap >Poco Nuvoloso</td>
-<td nowrap >-</td>
-<td nowrap >Sud (Ostro)</td>
-<td nowrap >Brezza tesa</td>
-<td nowrap >-</td>
+<td nowrap ><h2> </td></h2>
+<td nowrap ><h2>ore 12</td></h2>
+<td nowrap ><h2>30</td></h2>
+<td nowrap ><h2>34</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2><img src=icons/s.png></img></td></h2>
+<td nowrap ><h2>Brezza leggera</td></h2>
+<td nowrap ><h2>-</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap > </td>
-<td nowrap >ore 18</td>
-<td nowrap >28</td>
-<td nowrap >49</td>
-<td nowrap >Molto Nuvoloso</td>
-<td nowrap >-</td>
-<td nowrap >Sud (Ostro)</td>
-<td nowrap >Brezza tesa</td>
-<td nowrap >-</td>
+<td nowrap ><h2> </td></h2>
+<td nowrap ><h2>ore 18</td></h2>
+<td nowrap ><h2>24</td></h2>
+<td nowrap ><h2>44</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2><img src=icons/w.png></img></td></h2>
+<td nowrap ><h2>Brezza leggera</td></h2>
+<td nowrap ><h2>-</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap >30/06/2017</td>
-<td nowrap >ore 0</td>
-<td nowrap >26</td>
-<td nowrap >62</td>
-<td nowrap >Sereno</td>
-<td nowrap >-</td>
-<td nowrap >Sud (Ostro)</td>
-<td nowrap >Vento moderato</td>
-<td nowrap >-</td>
+<td nowrap ><h2>13/07/2017</td></h2>
+<td nowrap ><h2>ore 0</td></h2>
+<td nowrap ><h2>30</td></h2>
+<td nowrap ><h2>35</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2><img src=icons/n.png></img></td></h2>
+<td nowrap ><h2>Brezza tesa</td></h2>
+<td nowrap ><h2>-</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap > </td>
-<td nowrap >ore 6</td>
-<td nowrap >29</td>
-<td nowrap >55</td>
-<td nowrap >Sereno</td>
-<td nowrap >-</td>
-<td nowrap >Sud (Ostro)</td>
-<td nowrap >Vento moderato</td>
-<td nowrap >-</td>
+<td nowrap ><h2> </td></h2>
+<td nowrap ><h2>ore 6</td></h2>
+<td nowrap ><h2>36</td></h2>
+<td nowrap ><h2>22</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2><img src=icons/n.png></img></td></h2>
+<td nowrap ><h2>Vento moderato</td></h2>
+<td nowrap ><h2>-</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap > </td>
-<td nowrap >ore 12</td>
-<td nowrap >38</td>
-<td nowrap >24</td>
-<td nowrap >Sereno</td>
-<td nowrap >-</td>
-<td nowrap >Sud-Ovest (Libeccio)</td>
-<td nowrap >Brezza tesa</td>
-<td nowrap >-</td>
+<td nowrap ><h2> </td></h2>
+<td nowrap ><h2>ore 12</td></h2>
+<td nowrap ><h2>28</td></h2>
+<td nowrap ><h2>44</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2><img src=icons/n.png></img></td></h2>
+<td nowrap ><h2>Vento moderato</td></h2>
+<td nowrap ><h2>-</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap > </td>
-<td nowrap >ore 18</td>
-<td nowrap >29</td>
-<td nowrap >61</td>
-<td nowrap >Sereno</td>
-<td nowrap >-</td>
-<td nowrap >Sud (Ostro)</td>
-<td nowrap >Brezza tesa</td>
-<td nowrap >-</td>
+<td nowrap ><h2> </td></h2>
+<td nowrap ><h2>ore 18</td></h2>
+<td nowrap ><h2>26</td></h2>
+<td nowrap ><h2>67</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2><img src=icons/nw.png></img></td></h2>
+<td nowrap ><h2>Vento moderato</td></h2>
+<td nowrap ><h2>-</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap >01/07/2017</td>
-<td nowrap >ore 0</td>
-<td nowrap >25</td>
-<td nowrap >77</td>
-<td nowrap >Sereno</td>
-<td nowrap >-</td>
-<td nowrap >Sud-Est (Scirocco)</td>
-<td nowrap >Brezza tesa</td>
-<td nowrap >Nebbia leggera</td>
+<td nowrap ><h2>14/07/2017</td></h2>
+<td nowrap ><h2>ore 0</td></h2>
+<td nowrap ><h2>28</td></h2>
+<td nowrap ><h2>51</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2><img src=icons/n.png></img></td></h2>
+<td nowrap ><h2>Vento moderato</td></h2>
+<td nowrap ><h2>-</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap > </td>
-<td nowrap >ore 6</td>
-<td nowrap >29</td>
-<td nowrap >60</td>
-<td nowrap >Sereno</td>
-<td nowrap >-</td>
-<td nowrap >Sud-Est (Scirocco)</td>
-<td nowrap >Brezza tesa</td>
-<td nowrap >-</td>
+<td nowrap ><h2> </td></h2>
+<td nowrap ><h2>ore 6</td></h2>
+<td nowrap ><h2>33</td></h2>
+<td nowrap ><h2>26</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2><img src=icons/n.png></img></td></h2>
+<td nowrap ><h2>Vento moderato</td></h2>
+<td nowrap ><h2>-</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap > </td>
-<td nowrap >ore 12</td>
-<td nowrap >38</td>
-<td nowrap >29</td>
-<td nowrap >Sereno</td>
-<td nowrap >-</td>
-<td nowrap >Sud (Ostro)</td>
-<td nowrap >Brezza tesa</td>
-<td nowrap >-</td>
+<td nowrap ><h2> </td></h2>
+<td nowrap ><h2>ore 12</td></h2>
+<td nowrap ><h2>27</td></h2>
+<td nowrap ><h2>46</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2><img src=icons/n.png></img></td></h2>
+<td nowrap ><h2>Brezza tesa</td></h2>
+<td nowrap ><h2>-</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap > </td>
-<td nowrap >ore 18</td>
-<td nowrap >29</td>
-<td nowrap >53</td>
-<td nowrap >Sereno</td>
-<td nowrap >-</td>
-<td nowrap >Sud (Ostro)</td>
-<td nowrap >Vento moderato</td>
-<td nowrap >-</td>
+<td nowrap ><h2> </td></h2>
+<td nowrap ><h2>ore 18</td></h2>
+<td nowrap ><h2>24</td></h2>
+<td nowrap ><h2>61</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2><img src=icons/n.png></img></td></h2>
+<td nowrap ><h2>Brezza tesa</td></h2>
+<td nowrap ><h2>-</td></h2>
 </tr>
 </table>
