--- a/prev.html
+++ b/prev.html
@@ -1,275 +1,288 @@
 <Table border="1">
 <tr align='center'>
-<td nowrap >Data</td>
-<td nowrap >Orario</td>
-<td nowrap >Temp</td>
-<td nowrap >Humidity</td>
-<td nowrap >Pressure</td>
-<td nowrap >Geop500hPa</td>
-<td nowrap >CloudInt</td>
-<td nowrap >CloudCover</td>
-<td nowrap >RainInt</td>
-<td nowrap >RainRate</td>
-<td nowrap >RainAcc</td>
-<td nowrap >CAPE</td>
-<td nowrap >LI</td>
-<td nowrap >WindP</td>
-<td nowrap >WindDir</td>
-<td nowrap >WindI</td>
-<td nowrap >DP</td>
-<td nowrap >Fog</td>
-<td nowrap >Foggy</td>
+<td nowrap ><h2>Data</td></h2>
+<td nowrap ><h2>Orario</td></h2>
+<td nowrap ><h2>Temp</td></h2>
+<td nowrap ><h2>Humidity</td></h2>
+<td nowrap ><h2>Pressure</td></h2>
+<td nowrap ><h2>Geop500hPa</td></h2>
+<td nowrap ><h2>CloudInt</td></h2>
+<td nowrap ><h2>CloudCover</td></h2>
+<td nowrap ><h2>RainInt</td></h2>
+<td nowrap ><h2>RainRate</td></h2>
+<td nowrap ><h2>RainAcc</td></h2>
+<td nowrap ><h2>CAPE</td></h2>
+<td nowrap ><h2>LI</td></h2>
+<td nowrap ><h2>WindP</td></h2>
+<td nowrap ><h2>WindDir</td></h2>
+<td nowrap ><h2>WindI</td></h2>
+<td nowrap ><h2>DP</td></h2>
+<td nowrap ><h2>Fog</td></h2>
+<td nowrap ><h2>Foggy</td></h2>
+<td nowrap ><h2>Abs</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap >29/06/2017</td>
-<td nowrap >ore 0</td>
-<td nowrap >25</td>
-<td nowrap >75</td>
-<td nowrap >1010</td>
-<td nowrap >5847.97</td>
-<td nowrap >0</td>
-<td nowrap >Sereno</td>
-<td nowrap >0.0000</td>
-<td nowrap >-</td>
-<td nowrap >0.00</td>
-<td nowrap >1084</td>
-<td nowrap >-2.2</td>
-<td nowrap >17</td>
-<td nowrap >Sud (Ostro)</td>
-<td nowrap >Brezza tesa</td>
-<td nowrap >20</td>
-<td nowrap >5</td>
-<td nowrap >-</td>
+<td nowrap ><h2>12/07/2017</td></h2>
+<td nowrap ><h2>ore 0</td></h2>
+<td nowrap ><h2>30</td></h2>
+<td nowrap ><h2>36</td></h2>
+<td nowrap ><h2>1014</td></h2>
+<td nowrap ><h2>5889.85</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>0.0000</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>0.00</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2>2.3</td></h2>
+<td nowrap ><h2>6</td></h2>
+<td nowrap ><h2><img src=icons/nw.png></img></td></h2>
+<td nowrap ><h2>Brezza leggera</td></h2>
+<td nowrap ><h2>13</td></h2>
+<td nowrap ><h2>17</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>5.1</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap > </td>
-<td nowrap >ore 6</td>
-<td nowrap >29</td>
-<td nowrap >50</td>
-<td nowrap >1010</td>
-<td nowrap >5850.36</td>
-<td nowrap >0</td>
-<td nowrap >Sereno</td>
-<td nowrap >0.0000</td>
-<td nowrap >-</td>
-<td nowrap >0.00</td>
-<td nowrap >309</td>
-<td nowrap >-0.5</td>
-<td nowrap >9</td>
-<td nowrap >Sud (Ostro)</td>
-<td nowrap >Brezza leggera</td>
-<td nowrap >18</td>
-<td nowrap >11</td>
-<td nowrap >-</td>
+<td nowrap ><h2> </td></h2>
+<td nowrap ><h2>ore 6</td></h2>
+<td nowrap ><h2>38</td></h2>
+<td nowrap ><h2>17</td></h2>
+<td nowrap ><h2>1013</td></h2>
+<td nowrap ><h2>5899.10</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>0.0000</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>0.00</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2>4.2</td></h2>
+<td nowrap ><h2>10</td></h2>
+<td nowrap ><h2><img src=icons/n.png></img></td></h2>
+<td nowrap ><h2>Brezza leggera</td></h2>
+<td nowrap ><h2>9</td></h2>
+<td nowrap ><h2>29</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>5.0</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap > </td>
-<td nowrap >ore 12</td>
-<td nowrap >36</td>
-<td nowrap >25</td>
-<td nowrap >1010</td>
-<td nowrap >5864.91</td>
-<td nowrap >20</td>
-<td nowrap >Poco Nuvoloso</td>
-<td nowrap >0.0000</td>
-<td nowrap >-</td>
-<td nowrap >0.00</td>
-<td nowrap >57</td>
-<td nowrap >-0.1</td>
-<td nowrap >14</td>
-<td nowrap >Sud (Ostro)</td>
-<td nowrap >Brezza tesa</td>
-<td nowrap >13</td>
-<td nowrap >23</td>
-<td nowrap >-</td>
+<td nowrap ><h2> </td></h2>
+<td nowrap ><h2>ore 12</td></h2>
+<td nowrap ><h2>30</td></h2>
+<td nowrap ><h2>34</td></h2>
+<td nowrap ><h2>1013</td></h2>
+<td nowrap ><h2>5898.98</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>0.0000</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>0.00</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2>5.1</td></h2>
+<td nowrap ><h2>7</td></h2>
+<td nowrap ><h2><img src=icons/s.png></img></td></h2>
+<td nowrap ><h2>Brezza leggera</td></h2>
+<td nowrap ><h2>12</td></h2>
+<td nowrap ><h2>18</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>8.7</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap > </td>
-<td nowrap >ore 18</td>
-<td nowrap >28</td>
-<td nowrap >49</td>
-<td nowrap >1009</td>
-<td nowrap >5867.15</td>
-<td nowrap >75</td>
-<td nowrap >Molto Nuvoloso</td>
-<td nowrap >0.0000</td>
-<td nowrap >-</td>
-<td nowrap >0.00</td>
-<td nowrap >339</td>
-<td nowrap >-1.7</td>
-<td nowrap >19</td>
-<td nowrap >Sud (Ostro)</td>
-<td nowrap >Brezza tesa</td>
-<td nowrap >16</td>
-<td nowrap >12</td>
-<td nowrap >-</td>
+<td nowrap ><h2> </td></h2>
+<td nowrap ><h2>ore 18</td></h2>
+<td nowrap ><h2>24</td></h2>
+<td nowrap ><h2>44</td></h2>
+<td nowrap ><h2>1010</td></h2>
+<td nowrap ><h2>5889.62</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>0.0000</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>0.00</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2>8</td></h2>
+<td nowrap ><h2>7</td></h2>
+<td nowrap ><h2><img src=icons/w.png></img></td></h2>
+<td nowrap ><h2>Brezza leggera</td></h2>
+<td nowrap ><h2>11</td></h2>
+<td nowrap ><h2>13</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>8.8</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap >30/06/2017</td>
-<td nowrap >ore 0</td>
-<td nowrap >26</td>
-<td nowrap >62</td>
-<td nowrap >1009</td>
-<td nowrap >5866.78</td>
-<td nowrap >5</td>
-<td nowrap >Sereno</td>
-<td nowrap >0.0000</td>
-<td nowrap >-</td>
-<td nowrap >0.00</td>
-<td nowrap >746</td>
-<td nowrap >-4.4</td>
-<td nowrap >25</td>
-<td nowrap >Sud (Ostro)</td>
-<td nowrap >Vento moderato</td>
-<td nowrap >18</td>
-<td nowrap >8</td>
-<td nowrap >-</td>
+<td nowrap ><h2>13/07/2017</td></h2>
+<td nowrap ><h2>ore 0</td></h2>
+<td nowrap ><h2>30</td></h2>
+<td nowrap ><h2>35</td></h2>
+<td nowrap ><h2>1010</td></h2>
+<td nowrap ><h2>5872.17</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>0.0000</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>0.00</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2>6.3</td></h2>
+<td nowrap ><h2>16</td></h2>
+<td nowrap ><h2><img src=icons/n.png></img></td></h2>
+<td nowrap ><h2>Brezza tesa</td></h2>
+<td nowrap ><h2>13</td></h2>
+<td nowrap ><h2>17</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>9.8</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap > </td>
-<td nowrap >ore 6</td>
-<td nowrap >29</td>
-<td nowrap >55</td>
-<td nowrap >1009</td>
-<td nowrap >5865.65</td>
-<td nowrap >0</td>
-<td nowrap >Sereno</td>
-<td nowrap >0.0000</td>
-<td nowrap >-</td>
-<td nowrap >0.00</td>
-<td nowrap >1293</td>
-<td nowrap >-6.4</td>
-<td nowrap >25</td>
-<td nowrap >Sud (Ostro)</td>
-<td nowrap >Vento moderato</td>
-<td nowrap >19</td>
-<td nowrap >10</td>
-<td nowrap >-</td>
+<td nowrap ><h2> </td></h2>
+<td nowrap ><h2>ore 6</td></h2>
+<td nowrap ><h2>36</td></h2>
+<td nowrap ><h2>22</td></h2>
+<td nowrap ><h2>1010</td></h2>
+<td nowrap ><h2>5876.29</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>0.0000</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>0.00</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2>4.9</td></h2>
+<td nowrap ><h2>22</td></h2>
+<td nowrap ><h2><img src=icons/n.png></img></td></h2>
+<td nowrap ><h2>Vento moderato</td></h2>
+<td nowrap ><h2>11</td></h2>
+<td nowrap ><h2>25</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>8.5</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap > </td>
-<td nowrap >ore 12</td>
-<td nowrap >38</td>
-<td nowrap >24</td>
-<td nowrap >1010</td>
-<td nowrap >5881.93</td>
-<td nowrap >0</td>
-<td nowrap >Sereno</td>
-<td nowrap >0.0000</td>
-<td nowrap >-</td>
-<td nowrap >0.00</td>
-<td nowrap >269</td>
-<td nowrap >-2.3</td>
-<td nowrap >15</td>
-<td nowrap >Sud-Ovest (Libeccio)</td>
-<td nowrap >Brezza tesa</td>
-<td nowrap >14</td>
-<td nowrap >24</td>
-<td nowrap >-</td>
+<td nowrap ><h2> </td></h2>
+<td nowrap ><h2>ore 12</td></h2>
+<td nowrap ><h2>28</td></h2>
+<td nowrap ><h2>44</td></h2>
+<td nowrap ><h2>1009</td></h2>
+<td nowrap ><h2>5870.28</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>0.0000</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>0.00</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2>4.2</td></h2>
+<td nowrap ><h2>20</td></h2>
+<td nowrap ><h2><img src=icons/n.png></img></td></h2>
+<td nowrap ><h2>Vento moderato</td></h2>
+<td nowrap ><h2>15</td></h2>
+<td nowrap ><h2>13</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>6.3</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap > </td>
-<td nowrap >ore 18</td>
-<td nowrap >29</td>
-<td nowrap >61</td>
-<td nowrap >1010</td>
-<td nowrap >5893.49</td>
-<td nowrap >0</td>
-<td nowrap >Sereno</td>
-<td nowrap >0.0000</td>
-<td nowrap >-</td>
-<td nowrap >0.00</td>
-<td nowrap >1121</td>
-<td nowrap >-4.1</td>
-<td nowrap >19</td>
-<td nowrap >Sud (Ostro)</td>
-<td nowrap >Brezza tesa</td>
-<td nowrap >21</td>
-<td nowrap >8</td>
-<td nowrap >-</td>
+<td nowrap ><h2> </td></h2>
+<td nowrap ><h2>ore 18</td></h2>
+<td nowrap ><h2>26</td></h2>
+<td nowrap ><h2>67</td></h2>
+<td nowrap ><h2>1008</td></h2>
+<td nowrap ><h2>5859.17</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>0.0000</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>0.00</td></h2>
+<td nowrap ><h2>261</td></h2>
+<td nowrap ><h2>0.2</td></h2>
+<td nowrap ><h2>21</td></h2>
+<td nowrap ><h2><img src=icons/nw.png></img></td></h2>
+<td nowrap ><h2>Vento moderato</td></h2>
+<td nowrap ><h2>19</td></h2>
+<td nowrap ><h2>7</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>7.8</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap >01/07/2017</td>
-<td nowrap >ore 0</td>
-<td nowrap >25</td>
-<td nowrap >77</td>
-<td nowrap >1012</td>
-<td nowrap >5903.72</td>
-<td nowrap >0</td>
-<td nowrap >Sereno</td>
-<td nowrap >0.0000</td>
-<td nowrap >-</td>
-<td nowrap >0.00</td>
-<td nowrap >642</td>
-<td nowrap >-2.8</td>
-<td nowrap >14</td>
-<td nowrap >Sud-Est (Scirocco)</td>
-<td nowrap >Brezza tesa</td>
-<td nowrap >21</td>
-<td nowrap >4</td>
-<td nowrap >Nebbia leggera</td>
+<td nowrap ><h2>14/07/2017</td></h2>
+<td nowrap ><h2>ore 0</td></h2>
+<td nowrap ><h2>28</td></h2>
+<td nowrap ><h2>51</td></h2>
+<td nowrap ><h2>1009</td></h2>
+<td nowrap ><h2>5845.38</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>0.0000</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>0.00</td></h2>
+<td nowrap ><h2>18</td></h2>
+<td nowrap ><h2>1.3</td></h2>
+<td nowrap ><h2>20</td></h2>
+<td nowrap ><h2><img src=icons/n.png></img></td></h2>
+<td nowrap ><h2>Vento moderato</td></h2>
+<td nowrap ><h2>17</td></h2>
+<td nowrap ><h2>11</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>9.0</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap > </td>
-<td nowrap >ore 6</td>
-<td nowrap >29</td>
-<td nowrap >60</td>
-<td nowrap >1013</td>
-<td nowrap >5906.90</td>
-<td nowrap >0</td>
-<td nowrap >Sereno</td>
-<td nowrap >0.0000</td>
-<td nowrap >-</td>
-<td nowrap >0.00</td>
-<td nowrap >1067</td>
-<td nowrap >-4.7</td>
-<td nowrap >12</td>
-<td nowrap >Sud-Est (Scirocco)</td>
-<td nowrap >Brezza tesa</td>
-<td nowrap >20</td>
-<td nowrap >9</td>
-<td nowrap >-</td>
+<td nowrap ><h2> </td></h2>
+<td nowrap ><h2>ore 6</td></h2>
+<td nowrap ><h2>33</td></h2>
+<td nowrap ><h2>26</td></h2>
+<td nowrap ><h2>1009</td></h2>
+<td nowrap ><h2>5844.74</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>0.0000</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>0.00</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2>4.5</td></h2>
+<td nowrap ><h2>26</td></h2>
+<td nowrap ><h2><img src=icons/n.png></img></td></h2>
+<td nowrap ><h2>Vento moderato</td></h2>
+<td nowrap ><h2>11</td></h2>
+<td nowrap ><h2>22</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>8.8</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap > </td>
-<td nowrap >ore 12</td>
-<td nowrap >38</td>
-<td nowrap >29</td>
-<td nowrap >1012</td>
-<td nowrap >5920.76</td>
-<td nowrap >0</td>
-<td nowrap >Sereno</td>
-<td nowrap >0.0000</td>
-<td nowrap >-</td>
-<td nowrap >0.00</td>
-<td nowrap >742</td>
-<td nowrap >-3.7</td>
-<td nowrap >19</td>
-<td nowrap >Sud (Ostro)</td>
-<td nowrap >Brezza tesa</td>
-<td nowrap >17</td>
-<td nowrap >21</td>
-<td nowrap >-</td>
+<td nowrap ><h2> </td></h2>
+<td nowrap ><h2>ore 12</td></h2>
+<td nowrap ><h2>27</td></h2>
+<td nowrap ><h2>46</td></h2>
+<td nowrap ><h2>1009</td></h2>
+<td nowrap ><h2>5832.35</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>0.0000</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>0.00</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2>2</td></h2>
+<td nowrap ><h2>14</td></h2>
+<td nowrap ><h2><img src=icons/n.png></img></td></h2>
+<td nowrap ><h2>Brezza tesa</td></h2>
+<td nowrap ><h2>14</td></h2>
+<td nowrap ><h2>13</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>7.2</td></h2>
 </tr>
 <tr align='center'>
-<td nowrap > </td>
-<td nowrap >ore 18</td>
-<td nowrap >29</td>
-<td nowrap >53</td>
-<td nowrap >1010</td>
-<td nowrap >5915.70</td>
-<td nowrap >0</td>
-<td nowrap >Sereno</td>
-<td nowrap >0.0000</td>
-<td nowrap >-</td>
-<td nowrap >0.00</td>
-<td nowrap >563</td>
-<td nowrap >-3.7</td>
-<td nowrap >20</td>
-<td nowrap >Sud (Ostro)</td>
-<td nowrap >Vento moderato</td>
-<td nowrap >18</td>
-<td nowrap >11</td>
-<td nowrap >-</td>
+<td nowrap ><h2> </td></h2>
+<td nowrap ><h2>ore 18</td></h2>
+<td nowrap ><h2>24</td></h2>
+<td nowrap ><h2>61</td></h2>
+<td nowrap ><h2>1008</td></h2>
+<td nowrap ><h2>5813.81</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2><img src=icons/sun.png></img></td></h2>
+<td nowrap ><h2>0.0000</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>0.00</td></h2>
+<td nowrap ><h2>0</td></h2>
+<td nowrap ><h2>0.5</td></h2>
+<td nowrap ><h2>15</td></h2>
+<td nowrap ><h2><img src=icons/n.png></img></td></h2>
+<td nowrap ><h2>Brezza tesa</td></h2>
+<td nowrap ><h2>16</td></h2>
+<td nowrap ><h2>8</td></h2>
+<td nowrap ><h2>-</td></h2>
+<td nowrap ><h2>5.0</td></h2>
 </tr>
 </table>
